--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,9 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('com.github.everit-org.json-schema:org.everit.json.schema:1.7.0')
-    compile('ch.qos.logback:logback-classic:1.2.3')
     compile('org.apache.commons:commons-lang3:3.7')
+    compile('com.github.everit-org.json-schema:org.everit.json.schema:1.7.0')
+    compile('org.json:json:20171018')
     testCompile("org.mockito:mockito-core:2.15.0")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
