Add context shutdown hook to Runtime and possibility to shutdown via API

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile("org.springframework.boot:spring-boot-starter-security")
     compile('org.apache.commons:commons-lang3:3.7')
     compile('com.github.everit-org.json-schema:org.everit.json.schema:1.7.0')
     compile('org.json:json:20171018')
