--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile('org.apache.commons:commons-lang3:3.7')
     compile('com.github.everit-org.json-schema:org.everit.json.schema:1.7.0')
     compile('org.json:json:20171018')
+    compile('io.dropwizard.metrics:metrics-core:4.0.2')
+    compile('com.ryantenney.metrics:metrics-spring:3.1.3')
     testCompile("org.mockito:mockito-core:2.15.0")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
