--- a/build.gradle
+++ b/build.gradle
@@ -26,16 +26,26 @@ repositories {
     }
 }
 
+project.ext.versions = [
+        swaggerVersion: '2.8.0',
+        commonsLang3Version: '3.7',
+        everitVersion: '1.7.0',
+        orgJsonVersion: '20171018',
+        dropwizardMetricsVersion: '4.0.2',
+        springMetricsVersion: '3.1.3',
+        mockitoVersion: '2.15.0'
+]
+
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile("io.springfox:springfox-swagger2:2.8.0")
-    compile("io.springfox:springfox-swagger-ui:2.8.0")
-    compile('org.apache.commons:commons-lang3:3.7')
-    compile('com.github.everit-org.json-schema:org.everit.json.schema:1.7.0')
-    compile('org.json:json:20171018')
-    compile('io.dropwizard.metrics:metrics-core:4.0.2')
-    compile('com.ryantenney.metrics:metrics-spring:3.1.3')
-    testCompile("org.mockito:mockito-core:2.15.0")
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("io.springfox:springfox-swagger2:${versions.swaggerVersion}")
+    compile("io.springfox:springfox-swagger-ui:${versions.swaggerVersion}")
+    compile("org.apache.commons:commons-lang3:${versions.commonsLang3Version}")
+    compile("com.github.everit-org.json-schema:org.everit.json.schema:${versions.everitVersion}")
+    compile("org.json:json:${versions.orgJsonVersion}")
+    compile("io.dropwizard.metrics:metrics-core:${versions.dropwizardMetricsVersion}")
+    compile("com.ryantenney.metrics:metrics-spring:${versions.springMetricsVersion}")
+    testCompile("org.mockito:mockito-core:${versions.mockitoVersion}")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
